k8s/enterprise-gateway.yaml
# This file defines the Kubernetes objects necessary for Enterprise Gateway to run within Kubernetes.
#
apiVersion: v1
kind: Namespace
metadata:
  name: enterprise-gateway
  labels:
    app: enterprise-gateway
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: enterprise-gateway
    component: enterprise-gateway
  name: enterprise-gateway
  namespace: enterprise-gateway
spec:
  ports:
    - name: http
      port: 8888
      targetPort: 8888
  selector:
    gateway-selector: enterprise-gateway
  sessionAffinity: ClientIP
  type: NodePort
# Uncomment in order to use <k8s-master>:8888
#  externalIPs:
#  - k8s-master-public-ip
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: enterprise-gateway
  namespace: enterprise-gateway
  labels:
    gateway-selector: enterprise-gateway
    app: enterprise-gateway
    component: enterprise-gateway
spec:
  # Uncomment/Update to deploy multiple replicas of EG
  #  replicas: 1
  selector:
    matchLabels:
      gateway-selector: enterprise-gateway
  template:
    metadata:
      labels:
        gateway-selector: enterprise-gateway
        app: enterprise-gateway
        component: enterprise-gateway
    spec:
      # Created above.
      serviceAccountName: enterprise-gateway-sa
      containers:
        - env:
            - name: EG_PORT
              value: "8888"

              # Created above.
            - name: EG_NAMESPACE
              value: "enterprise-gateway"

              # Created above.  Used if no KERNEL_NAMESPACE is provided by client.
            - name: EG_KERNEL_CLUSTER_ROLE
              value: "kernel-controller"

              # All kernels reside in the EG namespace if True, otherwise KERNEL_NAMESPACE
              # must be provided or one will be created for each kernel.
            - name: EG_SHARED_NAMESPACE
              value: "False"

              # NOTE: This requires appropriate volume mounts to make notebook dir accessible
            - name: EG_MIRROR_WORKING_DIRS
              value: "False"

              # Current idle timeout is 1 hour.
            - name: EG_CULL_IDLE_TIMEOUT
              value: "3600"

            - name: EG_LOG_LEVEL
              value: "DEBUG"

            - name: EG_KERNEL_LAUNCH_TIMEOUT
              value: "60"

            - name: EG_KERNEL_WHITELIST
              value: "'r_kubernetes','python_kubernetes','python_tf_kubernetes','python_tf_gpu_kubernetes','scala_kubernetes','spark_r_kubernetes','spark_python_kubernetes','spark_scala_kubernetes'"

            - name: EG_DEFAULT_KERNEL_NAME
              value: "python_kubernetes"

          # Ensure the following VERSION tag is updated to the version of Enterprise Gateway you wish to run
          image: elyra/enterprise-gateway:dev
          # Use IfNotPresent policy so that dev-based systems don't automatically
          # update. This provides more control.  Since formal tags will be release-specific
          # this policy should be sufficient for them as well.
          imagePullPolicy: IfNotPresent
          name: enterprise-gateway
          ports:
            - containerPort: 8888
## Uncomment to enable NFS-mounted kernelspecs
#        volumeMounts:
#        - name: kernelspecs
#          mountPath: "/usr/local/share/jupyter/kernels"
#      volumes:
#      - name: kernelspecs
#        nfs:
#          server: <internal-ip-of-nfs-server>
#          path: "/usr/local/share/jupyter/kernels"
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: kernel-image-puller
  namespace: enterprise-gateway
spec:
  selector:
    matchLabels:
      name: kernel-image-puller
  template:
    metadata:
      labels:
        name: kernel-image-puller
        app: enterprise-gateway
        component: kernel-image-puller
    spec:
      containers:
        - name: kernel-image-puller
          image: elyra/kernel-image-puller:dev
          volumeMounts:
            - name: dockersock
              mountPath: "/var/run/docker.sock"
      volumes:
        - name: dockersock
          hostPath:
            path: /var/run/docker.sock
